--- a/style.css
+++ b/style.css
@@ -1,23 +1,3 @@
-/* Web Fonts */
-@font-face {
-  font-family: 'figtreelight_italic';
-  src: url('./fonts/figtree-italic-variablefont_wght-webfont.woff2') format('woff2'),
-       url('./fonts/figtree-italic-variablefont_wght-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-
-}
-
-@font-face {
-  font-family: 'figtreelight';
-  src: url('./fonts/figtree-variablefont_wght-webfont.woff2') format('woff2'),
-       url('./fonts/figtree-variablefont_wght-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-
-}
-
-/* Styles */
 
 *, *::before, *::after {
   box-sizing: border-box;
@@ -26,7 +6,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'figtreelight', sans-serif;
+  font-family: 'Figtree', sans-serif;
   background: hsl(47, 88%, 63%);
   min-height: 100vh;
 
@@ -56,4 +36,9 @@ img {
   width: 90%;
   border: 2px solid red;
   margin: 0 auto;
+}
+
+.card__main--title {
+  font-size: 1.2rem;
+  font-weight: 1000;
 }
