--- a/style.css
+++ b/style.css
@@ -29,6 +29,15 @@ body {
   border-radius: 20px;
 }
 
+.card__header--category {
+  display: inline-block;
+  background: hsl(47, 88%, 63%);
+  font-weight: 800;
+  padding: 0.5rem 0.75rem;
+  border-radius: 5px;
+  margin-bottom: 0;
+}
+
 img {
   width: 100%;
   border-radius: 10px;
